--- a/day1/index.html
+++ b/day1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link type="image/x-icon" href="/favicon.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="/favicon.ico" rel="shortcut icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,11 +17,29 @@
   </head>
   <body>
     <div class="timerContainer">
+      <svg
+        class="svgBorder"
+        width="520"
+        height="520"
+        viewBox="0 0 520 520"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <circle
+          cx="260"
+          cy="260"
+          r="255"
+          fill="none"
+          stroke="#9d0000"
+          stroke-width="10"
+        />
+        <circle class="progress" cx="260" cy="260" r="255" />
+      </svg>
       <div class="timerFilling">
         <div class="time">
-          <input class="minutes" type="number" value="01" min="00"/>
+          <input class="minutes" type="number" value="01" min="00" />
           <span>:</span>
-          <input class="seconds" type="number" value="05" min="00" max="59"/>
+          <input class="seconds" type="number" value="05" min="00" max="59" />
         </div>
         <button class="startStop">start</button>
         <button class="settings gear"></button>
